# ghost-observer

./: .gitignore  LICENSE  README.md  pyproject.toml  session1.csv
examples/: sample_app.py
ghost/: _aggregator.py  _fn_key.py  _observer.py  _storage.py  anomalies.py  cli.py  diff.py
ghost/explainer/: base.py  gemini.py  registry.py  template.py
tests/: sample_app.py  test_aggregator.py  test_anomalies.py  test_observer.py
