[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghost-observer"
version = "0.1.0"
description = "Watch any Python app run. See what static tools can't."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["profiler", "runtime", "observer", "debugging", "performance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "click>=8.0",
]

[project.optional-dependencies]
gemini = [
    "google-generativeai>=0.5.0",
]
dev = [
    "pytest>=7.0",
    "pytest-timeout",
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/yourusername/ghost-observer"
Issues = "https://github.com/yourusername/ghost-observer/issues"

[project.scripts]
ghost = "ghost.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["ghost*"]

[tool.pytest.ini_options]
testpaths = ["tests"]